[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/Menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/Teletactile-3zavL.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
margin_right = 1150.0
margin_bottom = 750.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1150.0
margin_bottom = 750.0
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1150.0
margin_bottom = 750.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 393.0
margin_top = 253.0
margin_right = 757.0
margin_bottom = 496.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 95.0

[node name="OptionsLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 364.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="Exit" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 364.0
margin_bottom = 132.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Exit"]
margin_left = 76.0
margin_right = 288.0
margin_bottom = 33.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="SelectorEasy" type="Label" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 33.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="EasyLabel" type="Label" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 212.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "Easy"

[node name="ChoiceEasy" type="Label" parent="CenterContainer/VBoxContainer/Exit/VBoxContainer/CenterContainer/HBoxContainer/EasyLabel"]
margin_left = 182.0
margin_right = 364.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "<--"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 364.0
margin_bottom = 169.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Exit2"]
margin_left = 76.0
margin_right = 288.0
margin_bottom = 33.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="SelectorMedium" type="Label" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 33.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="Medium" type="Label" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 212.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "Medium"

[node name="ChoiceMedium" type="Label" parent="CenterContainer/VBoxContainer/Exit2/VBoxContainer/CenterContainer/HBoxContainer/Medium"]
margin_left = 182.0
margin_right = 364.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "<--"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 364.0
margin_bottom = 206.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Exit3"]
margin_left = 76.0
margin_right = 288.0
margin_bottom = 33.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Exit3/VBoxContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Exit3/VBoxContainer/CenterContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="SelectorHard" type="Label" parent="CenterContainer/VBoxContainer/Exit3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 33.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="HardLabel" type="Label" parent="CenterContainer/VBoxContainer/Exit3/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 212.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
rect_pivot_offset = Vector2( -1107.64, 37 )
custom_fonts/font = SubResource( 3 )
text = "Hard"

[node name="ChoiceHard" type="Label" parent="CenterContainer/VBoxContainer/Exit3/VBoxContainer/CenterContainer/HBoxContainer/HardLabel"]
margin_left = 182.0
margin_right = 364.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
rect_pivot_offset = Vector2( -1107.64, 37 )
custom_fonts/font = SubResource( 3 )
text = "<--"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 364.0
margin_bottom = 243.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Exit4"]
margin_left = 76.0
margin_right = 288.0
margin_bottom = 33.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Exit4/VBoxContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Exit4/VBoxContainer/CenterContainer"]
margin_right = 212.0
margin_bottom = 33.0

[node name="SelectorReturn" type="Label" parent="CenterContainer/VBoxContainer/Exit4/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 33.0
rect_min_size = Vector2( 26, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="ReturnLabel" type="Label" parent="CenterContainer/VBoxContainer/Exit4/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 212.0
margin_bottom = 33.0
rect_min_size = Vector2( 182, 0 )
custom_fonts/font = SubResource( 3 )
text = "Return"
